# gpu-poder

./: AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DSP_ANALISE.md  FINAL_100_PERCENT.md  FINAL_50_PERCENT_STATUS.md  FINAL_CHECKPOINT_50_PERCENT.md  FINAL_DELIVERY.md  FINAL_SUMMARY.md  INVESTIGACAO.md  KGSL_50_PERCENT_COMPLETE.md  KGSL_FINAL_STATUS.md  KGSL_PHASE3_STATUS.md  KGSL_PROGRESS.md  PHASE_6_PLAN.md  PROMPT_AGENT.md  README.md  RELEASE_NOTES.md  SUMMARY.txt  WHISPER_GPU_TEST.md  build.rs  install-turnip.sh  mesa-docs-1:26.1.0-2-aarch64.pkg.tar.xz  setup-ai-tools.sh  test_whisper.py  vulkan-freedreno-1:26.1.0-2-aarch64.pkg.tar.xz  vulkan-mesa-implicit-layers-1:26.1.0-2-aarch64.pkg.tar.xz  vulkan-mesa-layers-1:26.1.0-2-aarch64.pkg.tar.xz
.claude/: napkin.md
releases/: README.md  install-gpu-driver.sh  install.sh  whisper-cli  whisper-cpp-bin.tar.xz  whisper-server
releases/drivers/: install-drivers.sh  libstdc++.so.6.0.34
releases/drivers/vulkan_icd.d/: freedreno_icd.aarch64.json  freedreno_icd.json
releases/llama-cpp-libs/: libggml-base.so.0.9.7  libllama.so.0.0.1
src/: command_buffer.rs  compute.rs  compute_shader.rs  core.rs  drm.rs  dsp.rs  gpu_context.rs  gpu_memory.rs  kgsl.rs  kgsl_direct.rs  kgsl_ioctl_fix.rs  lib.rs  libdrm_gpu.rs  main.rs  modes.rs  monitor.rs
