[package]
name = "gpu-poder"
version = "0.1.0"
edition = "2021"
authors = ["Deivison Santana"]
description = "Arquitetura de acesso GPU com 5 modos de permissão"

[dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }
libc = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "gpu-poder"
path = "src/main.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"

[build-dependencies]

[profile.release]
opt-level = 3
lto = true
